<resources>
    <string name="app_name">NeumoCuest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bienvenido_a_la_aplicacion_informatica_del_proyecto_neumococo_protocolo_de_vigilancia_centinela_automatizacion_de_cuestionarios">bienvenido_a_la_aplicacion_informatica_del_proyecto_neumococo_protocolo_de_vigilancia_centinela_automatizacion_de_cuestionarios</string>
    <string name="bienvenido_a_la_aplicacion_informatica_del_pproyecto_neumococo_protocolo_de_vigilancia_centinela_automatizacion_de_cuestionarios">Bienvenido a la Aplicacion Informatica del Pproyecto Neumococo. Protocolo de Vigilancia Centinela. Automatizacion de Cuestionarios</string>
    <string name="proyecto_neumococo_c_2014_biocubafarma_todos_los_derechos_reservados">Proyecto Neumococo c 2014. Biocubafarma. Todos los derechos reservados</string>
    <string name="datos">Datos</string>
    <string name="cuestionarios">Cuestionarios</string>
    <string name="button">Button</string>
    <string name="no_historia_cl_nica_">No. Historia Clínica (#):</string>
    <string name="no_semana_estad_stica_epidemiol_gica_">No. Semana Estadística/Epidemiológica (#):</string>
    <string name="i_datos_de_hospital_servicio">I. Datos de Hospital/Servicio</string>
    <string name="fecha_de_consulta_">Fecha de Consulta:</string>
    <string name="fecha_de_notificaci_n_">Fecha de Notificación:</string>
    <string name="nombre_de_hospital_">Nombre de Hospital:</string>
    <string name="nombre_del_servicio_de_captaci_n_">Nombre del servicio de captación:</string>
    <string name="urgencias">Urgencias</string>
    <string name="sala_de_hospitalizaci_n_">Sala de Hospitalización:</string>
    <string name="miscelanea">Miscelanea</string>
    <string name="respiratorio">Respiratorio</string>
    <string name="servicios_de_atenci_n_al_grave_uci_">Servicios de Atención al grave (UCI)</string>
    <string name="otra_">Otra:</string>
    <string name="referido_de_otro_hospital">Referido de otro hospital</string>
    <string name="ii_datos_del_caso">II. Datos del Caso</string>
    <string name="nombre_y_apellidos">Nombre y Apellidos</string>
    <string name="sexo">Sexo</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="edad_">Edad(##)</string>
    <string name="a_os_">Años:</string>
    <string name="meses">Meses</string>
    <string name="dias">Dias</string>
    <string name="residencia">Residencia</string>
    <string name="provincia">Provincia</string>
    <string name="municipio">Municipio</string>
    <string name="provincia_">Provincia:</string>
    <string name="municipio_">Municipio:</string>
    <string name="direccion_particular_">Direccion Particular:</string>
    <string name="area_de_salud_">Area de Salud:</string>
    <string name="fecha_inicio_de_s_ntomas_">Fecha Inicio de síntomas:</string>
    <string name="iii_criterios_de_evaluaci_n_para_irag">III. Criterios de evaluación para IRAG</string>
    <string name="fiebre_">Fiebre:</string>
    <string name="tos">Tos</string>
    <string name="dolor_de_garganta">Dolor de garganta</string>
    <string name="dificultad_al_respirar">Dificultad al respirar</string>
    <string name="frecuencia_respiratoria_">Frecuencia respiratoria:</string>
    <string name="flecha">flecha</string>
    <string name="caso_sospechoso">Caso Sospechoso</string>
    <string name="caso_sospechoso_de_irag">Caso Sospechoso de IRAG</string>
    <string name="indicaci_n_de_radiolog_a_rx_de_torax">Indicación de Radiología Rx de torax</string>
    <string name="fecha_de_indicaci_n_">Fecha de indicación:</string>
    <string name="iv_caracterizaci_n_cl_nica">IV. Caracterización clínica</string>
    <string name="comienzo_repentino">Comienzo repentino</string>
    <string name="fiebre">Fiebre</string>
    <string name="escalofr_os">Escalofríos</string>
    <string name="malestar_general">Malestar general</string>
    <string name="mialgias">Mialgias</string>
    <string name="dolor_pleur_tico">Dolor Pleurítico</string>
    <string name="taquipnea">Taquipnea</string>
    <string name="tos_c_esputo">Tos c/ esputo</string>
    <string name="v_mitos">Vómitos</string>
    <string name="convulsiones">Convulsiones</string>
    <string name="saturaci_n_de_oxigeno_lt_94_">Saturación de oxigeno &amp;lt;94%</string>
    <string name="saturaci_n_de_oxigeno_menor_al_94_">Saturación de oxigeno menor al 94%</string>
    <string name="otros">Otros</string>
    <string name="s_ndrome_de_condensaci_n_inflamatoria">Síndrome de condensación inflamatoria</string>
    <string name="neumon_a_bacteriana">Neumonía bacteriana</string>
    <string name="imagenabajo">imagenabajo</string>
    <string name="irag_por_sospecha_de_neumon_a_bacteriana">IRAG por sospecha de Neumonía bacteriana</string>
    <string name="s_ndrome_broncoalveolar_infeccioso_del_ni_o_peque_o_lt_3_a_os_">Síndrome broncoalveolar infeccioso del niño pequeño (&amp;lt;3 años)</string>
    <string name="s_ndrome_broncoalveolar_infeccioso_del_ni_o_peque_o_menor_de_3_a_os_">Síndrome broncoalveolar infeccioso del niño pequeño (menor de 3 años)</string>
    <string name="s_ndrome_broncoalveolar_infeccioso_del">Síndrome broncoalveolar infeccioso del</string>
    <string name="ni_o_peque_o_menor_de_3_a_os_">niño pequeño ( menor de 3 años)</string>
    <string name="bronquitis_aguda">Bronquitis aguda</string>
    <string name="bronconeumon_a">Bronconeumonía</string>
    <string name="bronquiolitis">Bronquiolitis</string>
    <string name="s_ndrome_obstructivo_bronquial">Síndrome obstructivo bronquial</string>
    <string name="neumon_a_intersticial">Neumonía Intersticial</string>
    <string name="neumon_a_viral">Neumonía viral</string>
    <string name="traqueobronquitis">Traqueobronquitis</string>
    <string name="sindrome_crupal">Sindrome crupal</string>
    <string name="epiglotitis">Epiglotitis</string>
    <string name="laringitis">Laringitis</string>
    <string name="laringotraqueobronquitis">Laringotraqueobronquitis</string>
    <string name="s_ndrome_coqueluchoide">Síndrome coqueluchoide</string>
    <string name="s_ndrome_interposici_n_liquida">Síndrome interposición liquida</string>
    <string name="s_ndrome_interposici_n_gaseosa">Síndrome interposición gaseosa</string>
    <string name="todo">TODO</string>
    <string name="irag_por_otra_ira_baja">IRAG por otra IRA baja</string>
    <string name="botoncuest">botoncuest</string>
    <string name="imagencuest">imagencuest</string>
    <string name="imagen">imagen</string>
    <string name="s_ndrome_de_infecci_n_respiratoria_alta">Síndrome de Infección respiratoria alta</string>
    <string name="enfermedad_tipo_influenza_eti_">Enfermedad tipo influenza (ETI)</string>
    <string name="otitis_media_aguda">Otitis Media Aguda</string>
    <string name="rinosinusitis">Rinosinusitis</string>
    <string name="otro_especifique_">Otro (especifique)</string>
    <string name="ira_alta_hospitalizada">IRA alta hospitalizada</string>
    <string name="ira_alta_hospitalizada_">IRA alta Hospitalizada:</string>
    <string name="enfermedad_neumoc_cica_invasiva">Enfermedad neumocócica invasiva</string>
    <string name="bacteriemia">Bacteriemia</string>
    <string name="hemocultivo_positivo">Hemocultivo positivo</string>
    <string name="fiebre_como_nica_manifestaci_n">Fiebre como única manifestación</string>
    <string name="sepsis_presencia_de_dos_o_m_s_de_los_siguientes_signos_">Sepsis (presencia de dos o más de los siguientes signos)</string>
    <string name="distermia_temperatura_38_c_o_lt_36_c_">Distermia (temperatura >38°C o &amp;lt;36ºC)</string>
    <string name="distermia_temperatura_mayor_38_c_o_menor_36_c_">Distermia (temperatura  mayor 38°C o menor 36ºC)</string>
    <string name="fiebre_c_">Fiebre(°C)</string>
    <string name="temperatura_c_">Temperatura(°C)</string>
    <string name="taquicardia_para_la_edad">Taquicardia para la edad</string>
    <string name="frecuencia_respiratoria">Frecuencia respiratoria</string>
    <string name="_min">/min</string>
    <string name="taquipnea_para_la_edad">Taquipnea para la edad</string>
    <string name="frecuencia_cardiaca">Frecuencia cardiaca</string>
    <string name="alteraciones_de_la_formula_leucocitaria">Alteraciones de la formula leucocitaria</string>
    <string name="por_exceso_leucositosis_">por exceso (leucositosis)</string>
    <string name="_por_defecto_leucopenia_">" por defecto (leucopenia)"</string>
    <string name="m_s_del_10_de_formas_inmaduras">más del 10% de formas inmaduras</string>
    <string name="_presencia_de_dos_o_m_s_de_los_signos_del_recuadro_azul_">(presencia de dos o más de los signos del recuadro azul )</string>
    <string name="sepsis_severa">sepsis severa</string>
    <string name="shock_s_ptico">Shock séptico</string>
    <string name="sospecha_de_neumon_a_neumoc_cica">Sospecha de neumonía neumocócica</string>
    <string name="sepsis_dos_o_m_s_de_los_signos_cuadro_verde_">Sepsis (dos o más de los signos cuadro verde)</string>
    <string name="_c">°C</string>
    <string name="temperatura">Temperatura</string>
    <string name="enfermedad_neumoc_cica_no_invasiva">Enfermedad neumocócica no invasiva</string>
    <string name="neumon_a_de_probable_etiolog_a">Neumonía de probable etiología</string>
    <string name="neumoc_cica_no_confirmada_por_laboratorio">neumocócica no confirmada por laboratorio</string>
    <string name="dolor_tor_cico_abdominal">Dolor torácico ó abdominal</string>
    <string name="estertores_h_medos_finos_focalizados">Estertores húmedos finos focalizados</string>
    <string name="catarro_previo_sin_mejor_a_y_prolongado">Catarro previo sin mejoría y prolongado</string>
    <string name="fiebre_menor_39_c_bif_sica">Fiebre menor 39ºC ó bifásica</string>
    <string name="dificultad_respiratoria">Dificultad respiratoria</string>
    <string name="tiraje">Tiraje</string>
    <string name="ira_con_tto_previo_de_antibacterianos">IRA con Tto. previo de antibacterianos</string>
    <string name="otitis_media_aguda_de_posible_etiolog_a_neumoc_cica_no_confirmada_por">Otitis Media Aguda de posible etiología neumocócica no confirmada por</string>
    <string name="laboratorio_un_criterio_mayor_y_dos_menores_">laboratorio (un criterio mayor y dos menores)</string>
    <string name="criterio_mayor_">Criterio mayor:</string>
    <string name="alteraciones_en_la_otoscopia">Alteraciones en la Otoscopia</string>
    <string name="otro">Otro</string>
    <string name="v_resultados_de_radiolog_a">V. Resultados de Radiología</string>
    <string name="resultado">Resultado</string>
    <string name="consolidaci_n">Consolidación</string>
    <string name="derrame_pleural">Derrame pleural</string>
    <string name="broncograma_a_reo">Broncograma aéreo</string>
    <string name="infiltrado_intersticial">Infiltrado intersticial</string>
    <string name="empiema">Empiema</string>
    <string name="atelectasia">Atelectasia</string>
    <string name="caso_probable_de_neumon_a_bacteriana">Caso probable de neumonía bacteriana</string>
    <string name="guardar_cuestionario">Guardar Cuestionario</string>
    <string name="descartar_cambios_y_salir">Descartar Cambios y Salir</string>
    <string name="iii_criterios_de_evaluaci_n_para_ira_g">III. Criterios de Evaluación para IRA-G</string>
    <string name="fiebre_actual">Fiebre Actual</string>
    <string name="antecedentes_de_fiebre_mayor_o_igual_a_38_c_en_los_ltimos_5_a_7_d_as_">"Antecedentes de fiebre mayor o igual a 38 °C en los últimos 5 a 7 días "</string>
    <string name="clasificaci_n_calidad_del_rx">Clasificación Calidad del Rx</string>
    <string name="nombre_y_apellidos_del_responsable_que_completa_el_cuestionario">Nombre y Apellidos del responsable que completa el cuestionario</string>
</resources>