<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView11"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/RelativeLayout01"
    android:layout_below="@+id/RelativeLayout01"
    android:layout_marginLeft="38dp"
    android:layout_marginTop="10dp"
    android:scrollbarDefaultDelayBeforeFade="10000000000000000"
    android:scrollbarFadeDuration="1000000000000000000" >

    <RelativeLayout
        android:layout_width="966dp"
        android:layout_height="468dp"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/EditText06f"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="65dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:src="@drawable/canc" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageButton2"
            android:layout_marginLeft="81dp"
            android:layout_toRightOf="@+id/textView1"
            android:text="@string/descartar_cambios_y_salir"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="italic"
            android:typeface="serif" />

        <ImageButton
            android:id="@+id/ImageButton01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_alignTop="@+id/imageButton2"
            android:layout_marginLeft="25dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:src="@drawable/insertc" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ImageButton01"
            android:layout_alignTop="@+id/ImageButton01"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:src="@drawable/insertc" />

        <EditText
            android:id="@+id/EditText06f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/TextView14"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/TextView14"
            android:layout_marginTop="87dp"
            android:ems="10"
            android:inputType="text"
            android:textColor="#48187d"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/TextView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/EditText06f"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="140dp"
            android:text="@string/nombre_y_apellidos_del_responsable_que_completa_el_cuestionario"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="21sp"
            android:textStyle="normal|italic"
            android:typeface="serif" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignLeft="@+id/EditText06f"
            android:text="@string/guardar_cuestionario"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="italic"
            android:typeface="serif" />

        <RelativeLayout
            android:id="@+id/linearLayout1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/EditText06f"
            android:layout_below="@+id/EditText06f"
            android:background="@drawable/shapeblue"
            android:orientation="vertical"
            android:visibility="visible" >

            <EditText
                android:id="@+id/editText0001"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/Iboton2"
                android:layout_toRightOf="@+id/TextView09"
                android:inputType="date"
                android:textColor="@android:color/black"
                android:textColorLink="@android:color/black"
                android:textSize="21sp"
                android:textStyle="italic"
                android:typeface="serif" />

            <TextView
                android:id="@+id/TextView09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/editText0001"
                android:layout_alignParentLeft="true"
                android:text="Fecha"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="normal|italic"
                android:typeface="serif"
                tools:ignore="HardcodedText" />

            <ImageButton
                android:id="@+id/Iboton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/TextView09"
                android:background="@android:color/transparent"
                android:contentDescription="@string/todo"
                android:src="@drawable/fechaclick" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>